# tp

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  README.en.md  README.md  WORKSPACE  cache.json  dev-requirements.txt  pyproject.toml  run.sh
.gitea/workflows/: check-format.yml  check.yml
bazel/: tf.patch  workspace0.bzl  workspace1.bzl
ccsrc/: CMakeLists.txt  test_log.cc
ccsrc/DistributedIR/: CMakeLists.txt  a.cc  block.cc  dividegraph.cpp  op.cc
ccsrc/DistributedIR/include/: CMakeLists.txt  graph.hpp  ir.hpp  node.hpp
ccsrc/DistributedIR/include/DistributedIR/: block.hpp  dividegraph.hpp  edge.hpp  graph.hpp  ir.hpp  node.hpp  op.hpp  tensor.hpp
ccsrc/DistributedIR/python/: CMakeLists.txt  graph.cc  pybind11_example.cc
ccsrc/adapters/include/adapters/tensorflow/rpc/: client.h
ccsrc/adapters/tensorflow/pass/: placement_pass.cc
ccsrc/adapters/tensorflow/rpc/: client.cc  graph.proto  server.cc  service.proto  util.cc
ccsrc/cluster/include/: CMakeLists.txt  common.hpp
ccsrc/cluster/include/cluster/: server.hpp
ccsrc/common/: CMakeLists.txt  error.hpp  result.hpp
ccsrc/common/include/: CMakeLists.txt  util.hpp
ccsrc/common/include/common/: error.hpp  fmt.hpp  log.h  result.hpp  result_macro.hpp  util.hpp
ccsrc/cost_graph/: CMakeLists.txt
ccsrc/cost_graph/fusion/: aware_fusion.cc
ccsrc/cost_graph/include/: CMakeLists.txt
ccsrc/cost_graph/include/cost_graph/: common.hpp  cost_graph.hpp
ccsrc/cost_graph/include/fusion/: aware_fusion.h
ccsrc/policy/: CMakeLists.txt
ccsrc/policy/aware/: CMakeLists.txt  aware_interface.cc  networkx_generator.cc
ccsrc/policy/fd-dps/: CMakeLists.txt  fddps_algorithm.cc
ccsrc/policy/include/: CMakeLists.txt
ccsrc/policy/include/policy/aware/: aware_interface.h  networkx_generator.h
ccsrc/policy/include/policy/fd-dps/: fddps_algorithm.h
ccsrc/policy/include/policy/sgp/: Builder.h  graphGroup.h  graphPartition.h
ccsrc/policy/sgp/: graphPartition.cc
cmake/: FetchBoost.cmake  FetchFmt.cmake  FetchGTest.cmake  FetchLLVM.cmake  FetchPybind11.cmake  FetchRange.cmake  FetchResult.cmake  FetchSpdlog.cmake  HeaderOnlyLibrary.cmake
docs/dev/: Geesibling-Jax-pipeline.md  alphafold_env.md  build.md
examples/: cache.json  datasets.py  mnist.py  resnet.py  test.py
examples/gpt2/: datasets.py  run_clm_flax.py  tokenizer.py
examples/gpt2/norwegian/: config.json  dataset_info.json  state.json  tokenizer.json
examples/vgg/: cache.json  vgg.py
python/adapters/jax/: jaxpr2graph.py
python/framework/adapters/jax/: __init__.py  api.py  block2jaxpr.py  jaxpr2graph.py  schedule.py
python/framework/aware/: progressive_fnn.py  progressive_nn.py  progressive_placer.py
python/geesibling/adapters/jax/: api.py  block2jaxpr.py  jaxpr2graph.py  model_parallelism.py  parallel_method.py  profile.py  schedule.py
python/geesibling/adapters/jax/pipeline/: apply_grad.py  devicecontext.py  instructions.py  layer_construction.py  pipeline_schedules.py  primitive_def.py  stage_construction.py  util.py
python/geesibling/adapters/jax/shard_parallel/: De-shard_shmap.py  JaxprDependency.py  edge_operations.txt  nodes.txt  shard_jax.py  shard_jax_copy.py  shard_parallel.py  shard_parallel_test.py
scripts/: batch.py  build-tf  configure  cppcheck-tf  format-cc  format-py  lint-cc  lint-py
temp/: api.py  apitemp.py
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt  test_DistributedIR.cc  test_aware.cc  test_aware_fusion.cc  test_aware_main.cc  test_common.cc  test_cost_graph.cc  test_example.cpp  test_fddps.cc  test_networkx_generator.cc  test_op.cc
